--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="col-lg-11">
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInUp" data-delay=".5s" data-key="hero-title">
-                                        An innovative and client-focused <br>
+                                        An innovative and client-focused law firm<br>
                                     </h1>
                                     <div class="hero-text2 mt-110" data-animation="fadeInUp" data-delay=".9s">
                                         <span><a data-key="hero-title1" href="services.html">UAE based Firm.
@@ -119,119 +119,6 @@
             </div>
         </div>
         <!-- slider Area End-->
-
-<!-- Services Area Start -->
-<div class="services-area1 section-padding30">
-    <div class="container">
-                  <!-- section tittle -->
-                  <div class="section-tittle section-tittle2 mb-55">
-                    <div class="front-text">
-                        <h2 data-key="service-title">Our <br> Services</h2>
-                    </div>
-                     
-                </div>
-        
-                <section class="project-area  section-padding30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-                    <div class="container">
-                       <div class="project-heading mb-35">
-                            <div class="row justify-content-end">
-                                <div class="col-lg-6">
-                                    <div class="properties__button">
-                                        <!--Nav Button  -->                                            
-                                        <nav> 
-                                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                                <a class="nav-item nav-link inactive" href="services.html" role="tab" aria-controls="nav-home" aria-selected="false" data-key="service-filter"> Show  all </a>
-                                            </div>
-                                        </nav>
-                                        <!--End Nav Button  -->
-                                    </div>
-                                </div>
-                            </div>
-                       </div>
-                       <div class="row">
-                        <div class="col-12">
-                            <!-- Nav Card -->
-                            <div class="tab-content active" id="nav-tabContent">
-                                <!-- card ONE -->
-                                <div class="tab-pane fade active show" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">           
-                                    <div class="project-caption">
-                                        <div class="row">
-                                            <div class="col-lg-4 col-md-6">
-                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                                                    <div class="project-img">
-                                                        <img src="assets/img/service/servicess1.webp" alt="">
-                                                    </div>
-                                                    <div class="project-cap">
-                                                        <a href="servises/business-uae.html" class="plus-btn"><i class="fas fa-briefcase"></i></a>
-                                                        <h4><a href="servises/business-uae.html" data-key="service1">BUSINESS SETUP IN UAE FREE ZONES</a></h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4 col-md-6">
-                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-                                                    <div class="project-img">
-                                                        <img src="assets/img/service/servicess4.webp" alt="">
-                                                    </div>
-                                                    <div class="project-cap">
-                                                        <a href="servises/intellectual-law.html" class="plus-btn"><i class="fas fa-heart"></i></a>
-                                                       <h4><a href="servises/intellectual-law.html" data-key="service2">INTELLECTUAL PROPERTY LAW</a></h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4 col-md-6">
-                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
-                                                    <div class="project-img">
-                                                        <img src="assets/img/service/servicess9.webp" alt="">
-                                                    </div>
-                                                    <div class="project-cap">
-                                                        <a href="servises/criminal-law.html" class="plus-btn"><i class="fas fa-shield-alt"></i></a>
-                                                       <h4><a href="servises/criminal-law.html" data-key="service3">CRIMINAL LAW</a></h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4 col-md-6">
-                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" >
-                                                    <div class="project-img">
-                                                        <img src="assets/img/service/servicess7.webp" alt="">
-                                                    </div>
-                                                    <div class="project-cap">
-                                                        <a href="servises/legal-Imegration.html" class="plus-btn"><i class="fas fa-handshake"></i></a>
-                                                       <h4><a href="servises/legal-Imegration.html" data-key="service4">IMMIGRATION LAW</a></h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4 col-md-6">
-                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-                                                    <div class="project-img">
-                                                        <img src="assets/img/service/servicess8.webp" alt="">
-                                                    </div>
-                                                    <div class="project-cap">
-                                                        <a href="servises/tax-law.html" class="plus-btn"><i class="fas fa-building"></i></a>
-                                                       <h4><a href="servises/tax-law.html" data-key="service5">TAX LAW</a></h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-4 col-md-6">
-                                                <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
-                                                    <div class="project-img">
-                                                        <img src="assets/img/service/servicess3.webp" alt="">
-                                                    </div>
-                                                    <div class="project-cap">
-                                                        <a href="servises/WILL-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
-                                                       <h4><a href="servises/wills-law.html" data-key="service6">WILL</a></h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        <!-- End Nav Card -->
-                        </div>
-                    </div>                    
-        </section>
-    </div>
-</div>
 
 <!-- About Area Start -->
 <section class="support-company-area fix pt-10 pb-145">
